Fixed issues with slack skill
