# DotNet/Slack/Contracts/SendMessageToUserRequest.cs
@@ -1,16 +1,14 @@
 ﻿using Newtonsoft.Json;
 using System.Text.Json.Serialization;
-using System;
 
 namespace Slack.Contracts
 {
-    public class AddReminderRequest
+    public class SendMessageToUserRequest
     {
+        [JsonProperty("user_fullname"), JsonPropertyName("user_fullname")]
+        public string UserFullName { get; set; }
+
         [JsonProperty("text"), JsonPropertyName("text")]
         public string Text { get; set; }
-
-        [JsonProperty("time_statement"), JsonPropertyName("time_statement")]
-        public string Time { get; set; }
-
     }
 }
